first cut at utilizing blueprint + the guarantee CSS template from freecsstemplates.org
moved media to static and also adding LOCAL_DEVELOPMENT to settings.py

--- a/vcweb/core/templates/base_vcweb.html
+++ b/vcweb/core/templates/base_vcweb.html
@@ -1,41 +1,53 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 
+{% block head %}
 <head>
 <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
-<meta content="text/html; charset=utf-8" http-equiv="Content-Type" />
-<link href="/static/media/css/style.css" rel="stylesheet" type="text/css" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection">
+<link rel="stylesheet" href="/static/css/blueprint/print.css" type="text/css" media="print">    
+<!--[if lt IE 8]><link rel="stylesheet" href="/static/media/css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+<link href="/static/css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />
 </head>
+{% endblock %}
 
 <body>
+	<div id='logo'>
+		<h1>{% block logo %}The Virtual Commons Web Environment{% endblock %}</h1>
+	</div>
+	
+	<hr/>
+	
+    <div id='header'>
+    	{% block header %}
+    	{% endblock %}
+    </div>
 
-<div id='header'>
-{% block header %}
+<div id='page'>
+	<div id="content">
+ 	{% block content %}
 
-{% endblock %}
-</div>
+ 	{% endblock %}
+	</div>
 
-<div id="content">
- {% block content %}
 
- {% endblock %}
+	<div style='clear: both;'>&nbsp;</div>
+	<!--  end #page -->
 </div>
 
 <div id="footer">
-{% block footer %}
-<small>
-<p align="right"><a href='http://shesc.asu.edu'>School of Human Evolution and Social Change</a> <br />
-<a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a> <br />
-
-The project is funded by the <a href='http://nsf.gov'>National Science Foundation</a><sup>*</sup> and <a href='http://www.asu.edu'>Arizona
-State University</a>.<br />
-<br />
-
-<sup>*</sup>Any opinions, findings, conclusions or recommendations
-expressed in this material are those of the authors and do not
-necessarily reflect the views of the National Science Foundation.</p>
-</small>
-{% endblock %}
+	{% block footer %}
+	<p>
+	<a href='http://shesc.asu.edu'>School of Human Evolution and Social Change</a> <br />
+	<a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>
+	</p>
+	<p class='legal'>
+	Copyright (c) 2010 Arizona Board of Regents.  Design adapted from <a href="http://www.freecsstemplates.org/">Free CSS Templates</a>.<br/>
+	This project is funded by the <a href='http://nsf.gov'>National Science Foundation</a> and <a href='http://www.asu.edu'>Arizona State University</a>.
+	<br />
+	</p>
+	{% endblock footer %}
 </div>
 
 </body>
