refactoring templates and starting to implement forestry experiment.
--HG--
rename : vcweb/core/templates/base_experimenter.html => vcweb/core/templates/base-experimenter.html
rename : vcweb/core/templates/base_participant.html => vcweb/core/templates/base-participant.html
rename : vcweb/core/templates/base_vcweb.html => vcweb/core/templates/base-vcweb.html

--- a/vcweb/core/templates/base-participant.html
+++ b/vcweb/core/templates/base-participant.html
@@ -1,4 +1,4 @@
-{% extends "base_vcweb.html" %}
+{% extends "base-vcweb.html" %}
 
 {% block title %}Virtual Commons Web Participant Interface{% endblock %}
 
