--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -1,19 +1,18 @@
-{% extends "base_vcweb.html" %}
+{% extends "base-vcweb.html" %}
 
 {% block title %}Virtual Commons Web Experiment{% endblock %}
 
 {% block header %}
+<!--  FIXME: add dynamic nav menu ala http://finiteline.homeip.net/blog/?p=42 -->
 <div id='menu'>
 	<ul>
-		<li class='current_page_item'><a href='/' class='first'>Home</a></li>
+		<li class='current_page_item'><a href='{% url home %}' class='first'>Home</a></li>
 		<li><a href='about/'>About</a></li>
 		<li><a class='external' href='http://commons.asu.edu/contact'>Contact us</a></li>
 		<li><a href='experimenter/'>Experimenters</a></li>
-		<li><a href='participate/'>Participate</a></li>
+		<li><a href='{% url participate %}'>Participate</a></li>
 	</ul>
 </div>
-
-
 {% endblock header %}
 
 {% block content %}
@@ -24,6 +23,13 @@
 	We develop and support a variety of web-based collective action experiments.  For more information, please visit 
 	<a class='external' href='http://commons.asu.edu'>commons.asu.edu</a>.
 	</div>
+	<br/>
+	<h2 class='title'>Current development</h2>
+	<div class='entry'>
+	Development is currently focused on the <a href='{% url forestry-index %}'>Forestry web-based experiment</a>.  
+	</div>
+	
+
 
 </div>
 {% endblock content %}
