--- a/vcweb/core/templates/about.html
+++ b/vcweb/core/templates/about.html
@@ -8,8 +8,8 @@
 		<li><a href='{% url home %}' class='first'>Home</a></li>
 		<li class='current_page_item'><a href='{% url about %}'>About</a></li>
 		<li><a class='external' href='http://commons.asu.edu/contact'>Contact us</a></li>
-		<li><a href='{% url experimenter %}'>Experimenters</a></li>
-		<li><a href='{% url participatant %}'>Participate</a></li>
+		<li><a href='{% url experimenter-index %}'>Experimenters</a></li>
+		<li><a href='{% url participant-index %}'>Participants</a></li>
 	</ul>
 </div>
 
@@ -29,9 +29,9 @@
 	</div>
 	<br/>
 	<div class='entry'>
-	The project is funded by the <a href='http://nsf.gov'>National Science Foundation</a> 
-	(BCS 0625354 and SES 0748632) and <a href='http://www.asu.edu'>Arizona State University</a> 
-	and is affiliated with the <a href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
+	The project is funded by the <a class='external' href='http://nsf.gov'>National Science Foundation</a> 
+	(BCS 0625354 and SES 0748632) and <a class='external' href='http://www.asu.edu'>Arizona State University</a> 
+	and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
 	</div>
 </div>
 {% endblock content %}
