--- a/vcweb/static/css/guarantee/style.css
+++ b/vcweb/static/css/guarantee/style.css
@@ -124,14 +124,15 @@ hr { display: none; }
 	text-align: center;
 	text-transform: capitalize;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 12px;
+	font-size: 0.75em;
 	font-weight: bold;
 	color: #FFFFFF;
 }
 
-#menu a:hover { 
-	background: url(/static/images/guarantee/img03.gif) no-repeat left top;
-	text-decoration: none; 
+#menu a:hover {
+	font-size: 0.8em;
+	text-decoration: underline; 
+
 }
 
 #menu .current_page_item a {
