updating form template CSS to make sure buttons, etc., are aligned.  May need to tweak if field names get too big.

--- a/vcweb/core/templates/form-as-div.html
+++ b/vcweb/core/templates/form-as-div.html
@@ -1,7 +1,8 @@
 {% for field in form %}
 <div class='field'>
-{{ field.errors }}
-{{ field.label_tag }} : {{ field }}
+<span class='input-errors'>{{ field.errors }}</span>
+<span class='label'>{{ field.label_tag }}:</span>
+<span class='input-field'> {{ field }} </span>
 </div>
 {% endfor %}
 
