--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -20,7 +20,7 @@
 
 <form action='' method='post'>
 {% include "form-as-div.html" %}
-<div class='field'>
+<div class='submit'>
 <input type='submit' value='Login' />
 </div>
 </form>
