--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -7,7 +7,7 @@
 <div id='menu'>
 	<ul>
 		<li class='current_page_item'><a href='{% url home %}' class='first'>Home</a></li>
-		<li><a href='about/'>About</a></li>
+		<li><a href='{% url about %}'>About</a></li>
 		<li><a class='external' href='http://commons.asu.edu/contact'>Contact us</a></li>
 		<li><a href='{% url experimenter-index %}'>Experimenters</a></li>
 		<li><a href='{% url participant-index %}'>Participants</a></li>
