--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -1,25 +1,11 @@
-{% extends "base-vcweb.html" %}
+{% extends "base-vcweb-form.html" %}
 
 {% block title %}Virtual Commons Web Experiment{% endblock %}
-
-{% block header %}
-<div id='menu'>
-	<ul>
-		<li><a href='{% url home %}' class='first'>Home</a></li>
-		<li><a href='{% url about %}'>About</a></li>
-		<li><a class='external' href='http://commons.asu.edu/contact'>Contact us</a></li>
-		<li class='current_page_item'><a href='{% url experimenter-index %}'>Experimenters</a></li>
-		<li><a href='{% url participant-index %}'>Participants</a></li>
-	</ul>
-</div>
-
-
-{% endblock header %}
 
 {% block content %}
 
 <form action='' method='post'>
-{% include "form-as-div.html" %}
+{% include "includes/form-as-div.inc" %}
 <div class='submit'>
 <input type='submit' value='Login' />
 </div>
