--- a/vcweb/static/css/guarantee/style.css
+++ b/vcweb/static/css/guarantee/style.css
@@ -138,18 +138,18 @@ hr { display: none; }
 	text-align: center;
 	text-transform: capitalize;
 	font-family: Arial, Helvetica, sans-serif;
-	font-size: 0.75em;
+	font-size: 0.8em;
 	font-weight: bold;
 	color: #FFFFFF;
 }
 
 #menu a:hover {
-	font-size: 0.8em;
+	font-size: 0.88em;
 	text-decoration: underline; 
 
 }
 
-#menu .current_page_item a {
+#menu .active a {
 	background: url(/static/images/guarantee/img03.gif) no-repeat left top;
 }
 
