--- a/vcweb/core/templates/registration/password_reset_form.html
+++ b/vcweb/core/templates/registration/password_reset_form.html
@@ -1,29 +1,29 @@
 {% extends "base-vcweb-form.html" %}
 
-{% block title %}Virtual Commons Web Login{% endblock %}
+
 
 {% block head %}
 {{ block.super }}
 
 <script type='text/javascript'>
 $(document).ready(function() {
-	$('#loginForm').validate();
+	$('#registrationForm').validate();
 });
 </script>
 
 {% endblock head %}
 
+{% block title %}Virtual Commons Web Experiment Registration{% endblock %}
+
 {% block content %}
 
-<form id='loginForm' name='loginForm' action='' method='post'>
+<form id='registrationForm' action='' method='post'>
 <fieldset>
-<legend>Returning User</legend>
-<p>
-Don&#39;t have an account or a first-time user?  Please <a href='{% url register %}'>register first</a>.
-</p>
+<legend>Reset your password</legend>
+
 {% include "includes/form-as-div.inc" %}
 <div class='submit'>
-<input type='submit' value='Login' />
+<input type='submit' value='Reset' />
 </div>
 </fieldset>
 
