--- a/vcweb/core/templates/registration/register.html
+++ b/vcweb/core/templates/registration/register.html
@@ -1,26 +1,27 @@
 {% extends "base-vcweb-form.html" %}
 
-{% block title %}Virtual Commons Web Login{% endblock %}
+
 
 {% block head %}
 {{ block.super }}
 
 <script type='text/javascript'>
 $(document).ready(function() {
-	$('#loginForm').validate();
+	$('#registrationForm').validate();
 });
 </script>
 
 {% endblock head %}
 
+{% block title %}Virtual Commons Web Experiment Registration{% endblock %}
+
 {% block content %}
 
-<form id='loginForm' name='loginForm' action='' method='post'>
+<form id='registrationForm' action='' method='post'>
 <fieldset>
-<legend>Returning User</legend>
+<legend>New User</legend>
 <p>
-Don&#39;t have an account or a first-time user?  Please <a href='{% url register %}'>register first</a>.
-</p>
+Returning users can <a href='{% url login %}'>login here</a> or <a href='{% url password-reset %}'>retrieve your password</a>.
 {% include "includes/form-as-div.inc" %}
 <div class='submit'>
 <input type='submit' value='Login' />
