--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -7,7 +7,8 @@
 
 <script type='text/javascript'>
 $(document).ready(function() {
-	$('#loginForm').validate();
+    $(':input').addClass('required');
+    $('#loginForm').validate();
 });
 </script>
 
