--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -9,6 +9,7 @@
 $(document).ready(function() {
     $(':input').addClass('required');
     $('#loginForm').validate();
+    $('#id_email').focus();
 });
 </script>
 
@@ -22,6 +23,7 @@ $(document).ready(function() {
 <p>
 Don&#39;t have an account or a first-time user?  Please <a href='{% url register %}'>register first</a>.
 </p>
+
 {% include "includes/form-as-div.inc" %}
 <div class='submit'>
 <input type='submit' value='Login' />
