still mucking about with registration.  Going to slurp django-registration module into our own app so we can incorporate email activation more directly.

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -17,7 +17,7 @@
 	<div class='entry'>
 	Development is currently focused on converting the 
 	<a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a> 
-	into web-based experiments, starting with the <a href='{% url forestry-index %}'>forestry experiment</a>.  
+	into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.  
 	</div>
 </div>
 {% endblock content %}
