--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -21,7 +21,7 @@ $(document).ready(function() {
 <fieldset>
 <legend>Returning User</legend>
 <p>
-Don&#39;t have an account or a first-time user?  Please <a href='{% url register %}'>register first</a>.
+Don&#39;t have an account or a first-time user?  Please <a href='{% url core:register %}'>register first</a>.
 </p>
 
 {% include "includes/form-as-div.inc" %}
