--- a/vcweb/core/templates/participant-index.html
+++ b/vcweb/core/templates/participant-index.html
@@ -3,24 +3,19 @@
 {% block title %}Virtual Commons Web Participant Interface{% endblock %}
 
 {% block header %}
-<div id="masthead">
-<table width="100%"
-	style="background-color: #9ACD32; background-repeat: no-repeat;"
-	border="0">
-	<tr>
-		<th align="left" valign="top" style="background-color: #9ACD32;">
-		<img height="35" alt="imageTree" src="/static/images/Logo3.png/" /></th>
-		<th align="right" valign="bottom"><b style="color:purple; margin-right:10px;">{{username}}</b></th>
-	</tr>
-</table>
-</div>
+{% include "includes/participant-nav-menu.inc" %}
 
-{% endblock header %}
-
+{% endblock %}
 {% block content %}
-<div id="page_content">
-<p>
-The base participant interface, will be customized for each experiment.
-</p>
-</div>
+<h2>Welcome back, {{ user }}</h2>
+
+<fieldset>
+<legend>Your games</legend>
+<ul>
+{% for game in games %}
+<li>{{ game }}</li>
+
+{% endfor %}
+</ul>
+</fieldset>
 {% endblock content %}
