updated models and templates
TODO: change some TimeFields to DateTimeFields

--- a/vcweb/core/templates/base-experimenter.html
+++ b/vcweb/core/templates/base-experimenter.html
@@ -3,7 +3,7 @@
 {% block title %} Virtual Commons Web Experimenter Interface {% endblock %} 
 
 {% block content %}
-<div id="page_content">
+<div id="post">
 <p>
 This is the base for the experimenter interface.
 </p>
