following some django design patterns for templates ala http://uswaretech.com/books/djangodesignpatterns/

--- a/vcweb/core/templates/registration/password_reset_form.html
+++ b/vcweb/core/templates/registration/password_reset_form.html
@@ -1,13 +1,11 @@
 {% extends "base-vcweb-form.html" %}
 
-
-
 {% block head %}
 {{ block.super }}
 
 <script type='text/javascript'>
 $(document).ready(function() {
-	$('#registrationForm').validate();
+	$('#resetPasswordForm').validate();
 });
 </script>
 
@@ -17,7 +15,7 @@ $(document).ready(function() {
 
 {% block content %}
 
-<form id='registrationForm' action='' method='post'>
+<form id='resetPasswordForm' action='' method='post'>
 <fieldset>
 <legend>Reset your password</legend>
 
