jquery validate is acting up again.

--- a/vcweb/core/templates/base-vcweb.html
+++ b/vcweb/core/templates/base-vcweb.html
@@ -5,17 +5,11 @@
 {% block head %}
 <title>{% block title %}Virtual Commons Web Experiment{% endblock %}</title>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection">
-<link rel="stylesheet" href="/static/css/blueprint/print.css" type="text/css" media="print">    
-<!--[if lt IE 8]><link rel="stylesheet" href="/static/media/css/blueprint/ie.css" type="text/css" media="screen, projection"><![endif]-->
+<link rel="stylesheet" href="/static/css/blueprint/screen.css" type="text/css" media="screen, projection" />
+<link rel="stylesheet" href="/static/css/blueprint/print.css" type="text/css" media="print" />    
+<!--[if lt IE 8]><link rel="stylesheet" href="/static/media/css/blueprint/ie.css" type="text/css" media="screen, projection" /><![endif]-->
 <link href="/static/css/guarantee/style.css" rel="stylesheet" type="text/css" media="screen" />
 <script type='text/javascript' src='/static/js/jquery-1.4.2.min.js'></script>
-<script type='text/javascript'>
-<!-- sets all external links to open up in new windows -->
-$(document).ready(function() {
-	$('a.external').attr({ target: "_blank" });
-});
-</script>
 {% endblock %}
 </head>
 
@@ -58,8 +52,12 @@ $(document).ready(function() {
 	<br />
 	</p>
 	{% endblock footer %}
-</div>
 
+</div>
+	<script type='text/javascript'>
+<!-- sets all external links to open up in new windows -->
+	$('a.external').attr({ target: "_blank" });
+	</script>
 </body>
 
 </html>
