finished simple/naive participant registration

--- a/vcweb/core/templates/registration/register.html
+++ b/vcweb/core/templates/registration/register.html
@@ -74,7 +74,7 @@ Returning users can <a href='{% url core:login %}'>login here</a> or <a href='{%
 </div>
 
 <div class='submit'>
-<input type='submit' value='Login' />
+<input type='submit' value='Register' />
 </div>
 </fieldset>
 
