css work and some fixes for __unicode__ for our domain models.  Working towards getting the participant interface functional with sidebar space for a chatbox.

--- a/vcweb/core/templates/base-participant.html
+++ b/vcweb/core/templates/base-participant.html
@@ -1,11 +1,9 @@
 {% extends "base-vcweb.html" %}
 
 {% block title %}Virtual Commons Web Participant Interface{% endblock %}
+{% block header %}
+{% include "includes/participant-nav-menu.inc" %}
+{% endblock %}
 
-{% block content %}
-<div id="page_content">
-<p>
-The base participant interface, will be customized for each experiment.
-</p>
-</div>
-{% endblock content %}
+
+
