--- a/vcweb/core/templates/participant-index.html
+++ b/vcweb/core/templates/participant-index.html
@@ -1,23 +1,18 @@
-{% extends "base-vcweb.html" %}
+{% extends "base-participant.html" %}
 
 {% block title %}Virtual Commons Web Participant Interface{% endblock %}
 
-{% block header %}
-{% include "includes/participant-nav-menu.inc" %}
-
-{% endblock %}
-{% block content %}
+{% block page %}
 <div class='notice'>
 Welcome back, {{participant}}.  Experiments you are currently participating in are listed below.
 </div>
 
 <fieldset>
 <legend>Your experiments</legend>
-{% if games %}
+{% if experiments %}
 <ul>
-	{% for game_instance in games %}
-	<li><a href='{{game_instance.participant_url}}'>{{
-	game_instance }}</a></li>
+	{% for e in experiments %}
+	<li><a href='{{ e.participant_url }}'>{{ e }}</a></li>
 	{% endfor %}
 </ul>
 {% else %}
@@ -27,4 +22,4 @@ You are not participating in any active experiments.
 {% endif %}
 
 </fieldset>
-{% endblock content %}
+{% endblock page %}
