fixing CSS, adding experimenter view hook

--- a/vcweb/core/templates/about.html
+++ b/vcweb/core/templates/about.html
@@ -2,7 +2,7 @@
 
 {% block title %}Virtual Commons Web Experiment{% endblock %}
 
-{% block content %}
+{% block page %}
 <div id='post'>
 	<h2 class='title'>About Us</h2>
 	<div class='entry'>
@@ -20,5 +20,5 @@
 	and is affiliated with the <a class='external' href='http://csid.asu.edu'>Center for the Study of Institutional Diversity</a>.
 	</div>
 </div>
-{% endblock content %}
+{% endblock page %}
 
