--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -3,7 +3,7 @@
 {% block title %}Virtual Commons Web Experiment{% endblock %}
 
 
-{% block content %}
+{% block page%}
 <div id='post'>
 	<h2 class='title'>Welcome</h2>
 	<div class='entry'>
@@ -20,5 +20,5 @@
 	into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.  
 	</div>
 </div>
-{% endblock content %}
+{% endblock page %}
 
