--- a/vcweb/core/templates/registration/login.html
+++ b/vcweb/core/templates/registration/login.html
@@ -15,7 +15,7 @@ $(document).ready(function() {
 
 {% endblock head %}
 
-{% block content %}
+{% block page %}
 
 <form id='loginForm' name='loginForm' action='' method='post'>
 <fieldset>
@@ -32,5 +32,5 @@ Don&#39;t have an account or a first-time user?  Please <a href='{% url core:reg
 
 </form>
 
-{% endblock content %}
+{% endblock page %}
 
