--- a/vcweb/core/templates/experimenter-index.html
+++ b/vcweb/core/templates/experimenter-index.html
@@ -11,8 +11,8 @@
 Welcome to the experimenter interface.  You are logged in as {{experimenter}}.
 <br/>
 <br/>
-<a href='http://libai.la.asu.edu:8080/admin'>add / configure an experiment</a> | 
-<a href='http://libai.la.asu.edu:8080/admin'>download data</a> |
+<a href='/admin'>add / configure an experiment</a> | 
+<a href='/admin'>download data</a> |
 <a href='http://commons.asu.edu/contact'>report a bug</a>
 
 </div>
