starting work on forestry views again.  Need to work out details on server push or long polling so that clients and experimenters can stay synced.

--- a/vcweb/core/templates/index.html
+++ b/vcweb/core/templates/index.html
@@ -17,7 +17,10 @@
 	<div class='entry'>
 	Development is currently focused on converting the 
 	<a class='external' href='http://commons.asu.edu/papers'>field experiments on water, forests, and fisheries</a> 
-	into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.  
+	into web-based experiments, starting with the <a href='{% url forestry:index %}'>forestry experiment</a>.
+	</div>
+	<div class='entry'>
+	<p>For up-to-date development news, please visit <a class='external' href='http://commons.asu.edu/news''>http://commons.asu.edu/news</a>.</p>   
 	</div>
 </div>
 {% endblock page %}
