adding round_number to RoundConfiguration as the "displayed" round number, this defaults to 0 in the database.  If not set, asking for RoundConfiguration.round_number returns the sequence_number which is now used for internal book-keeping ordering instead of display.  This lets us have chat rounds in between regular rounds without screwing up the round number (e.g., a chat round between rounds 3 and 4 shouldn't make round 4 displayed as round 5).
Adding stubbed out html templates for other forestry round types.

--- a/vcweb/forestry/templates/forestry/experimenter.html
+++ b/vcweb/forestry/templates/forestry/experimenter.html
@@ -1,4 +1,12 @@
 {% extends "base-experimenter.html" %}
 
 {% block title %} Forestry Experimenter Interface {% endblock %}
- 
+
+{% block content %}
+<h3>Manage your experiments</h3>
+<p>
+Your experiments:
+</p>
+
+
+{% endblock content %}
