--- a/vcweb/forestry/templates/forestry/participate.html
+++ b/vcweb/forestry/templates/forestry/participate.html
@@ -5,7 +5,11 @@
 {% block content %}
 <h3>Forestry</h3>
 <p>
-Welcome!  For general instructions about your experiment, please click here.
+
+
+<div class='round'>
+</div>
+
 </p>
 {% endblock content %}
  
