fixing active tag and broken references in guarantee css

--- a/vcweb/static/css/guarantee/style.css
+++ b/vcweb/static/css/guarantee/style.css
@@ -95,7 +95,7 @@ hr { display: none; }
 	float: left;
 	width: 940px;
 	height: 36px;
-	background: url(/static/images/guarantee/img02.jpg) no-repeat left top;
+	background: url(/static/images/guarantee/img02.gif) no-repeat left top;
 }
 
 #menu ul {
